fix(ui) fix width new message indicator on safari

--- a/ui/src/assets/_chat.css
+++ b/ui/src/assets/_chat.css
@@ -46,7 +46,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  min-width: 2rem;
+  width: 2rem;
   height: 2rem;
   margin: auto;
   padding: .7em 0.5em 0.4em;
